--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext{
+    ext {
         springBootVersion = '2.1.7.RELEASE'
     }
     repositories {
@@ -26,15 +26,8 @@ repositories {
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
-//    junit5를 쓰기 위해서는 spring-boot-starter-test 에 포함된 junit4를 exclude 해주어야 함
-    testCompile('org.springframework.boot:spring-boot-starter-test'){
-        exclude module: 'junit'
-    }
-    testImplementation 'org.junit.jupiter:junit-jupiter-api'
-    testCompile('org.junit.jupiter:junit-jupiter-params')
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-}
-
-test {
-    useJUnitPlatform()
+    compile('org.projectlombok:lombok')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('com.h2database:h2')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
